Исправление gulpfile.js для сборки проекта (файлы libs, шрифты).

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
 
 	<!-- Load Fonts CSS Start -->
 	<script>
-		// loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
-		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
+        loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+//		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
 	</script>
 	<!-- Load Fonts CSS End -->
 
@@ -343,7 +343,7 @@
                                                 <ul class="list messages-list">
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
                                                             Здравствуйте! Хотел поблагодарить за помощь в ремонте автомобиля ...
@@ -355,7 +355,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
+                                                            <img src="img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
                                                             Привет, Вань!
@@ -367,7 +367,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
                                                             Иван, подскажите, пожалуйста, как поменять заднюю балку?
@@ -436,7 +436,7 @@
                                     </div>
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
-                                            <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
+                                            <img src="img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
@@ -469,7 +469,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-6 col-logo">
                             <a href="index.html">
-                                <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
+                                <img src="img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-5 col-title">
@@ -643,7 +643,7 @@
                                         <a href="page.html">Рекламный пост, закрепленный в самом верху страницы</a>
                                     </h3>
                                     <div class="item-image">
-                                        <img src="/img/uploads/articles/fixed-article-1.png" alt="">
+                                        <img src="img/uploads/articles/fixed-article-1.png" alt="">
                                     </div>
                                     <div class="text item-text">
                                         <p>
@@ -679,14 +679,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-3.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-3.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
                                             </div>
@@ -781,14 +781,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-2.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-2.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
                                             <div class="date">
@@ -861,14 +861,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-1.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-1.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
                                             <div class="date">
@@ -979,7 +979,7 @@
                         <!--<div class="page-info">-->
                             <!--<div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">-->
                                 <!--<a href="http://avtorem.info/user/ivan" itemprop="url">-->
-                                    <!--<img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>-->
+                                    <!--<img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>-->
                                 <!--</a>-->
                             <!--</div>-->
                             <!--<div class="date">-->
@@ -1083,7 +1083,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1099,7 +1099,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1115,7 +1115,7 @@
                             </div>
                             <div class="item has-solution">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1157,7 +1157,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1180,7 +1180,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1202,7 +1202,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1224,7 +1224,7 @@
                             <div class="item">
                                 <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Ivan</span></a>
@@ -1237,7 +1237,7 @@
                             <div class="item">
                                 <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>SKS</span></a>
@@ -1250,7 +1250,7 @@
                             <div class="item">
                                 <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Мастер</span></a>
@@ -1264,7 +1264,7 @@
                             <div class="item">
                                 <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Muph1984</span></a>
@@ -1278,7 +1278,7 @@
                             <div class="item">
                                 <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Макс</span></a>
@@ -1306,7 +1306,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1327,7 +1327,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1347,7 +1347,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1399,7 +1399,7 @@
                         <div class="first-column">
                             <div class="row">
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
-                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                                    <img src="img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
@@ -1485,7 +1485,7 @@
                             </p>
 
                             <div class="m-t-20 align-center-xs">
-                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                                <img src="img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
 
                             <p class="m-t-20 small visible-xs">
