--- a/app/search.html
+++ b/app/search.html
@@ -30,8 +30,8 @@
 
 	<!-- Load Fonts CSS Start -->
 	<script>
-		// loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
-		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
+		loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+//		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
 	</script>
 	<!-- Load Fonts CSS End -->
 
@@ -231,7 +231,7 @@
                                                 <ul class="list messages-list">
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
                                                             Здравствуйте! Хотел поблагодарить за помощь в ремонте автомобиля ...
@@ -243,7 +243,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
+                                                            <img src="img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
                                                             Привет, Вань!
@@ -255,7 +255,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
                                                             Иван, подскажите, пожалуйста, как поменять заднюю балку?
@@ -324,7 +324,7 @@
                                     </div>
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
-                                            <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
+                                            <img src="img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
@@ -356,7 +356,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-6 col-logo">
                             <a href="index.html">
-                                <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
+                                <img src="img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-5 col-title">
@@ -681,14 +681,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-3.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-3.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
                                             </div>
@@ -760,7 +760,7 @@
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
                                             </div>
@@ -819,7 +819,7 @@
                                     </ul>
                                     <div class="item-content">
                                         <a href="profile.html" class="user-avatar">
-                                            <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                            <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                         </a>
                                         <div>
                                             <div class="item-title">
@@ -849,7 +849,7 @@
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <!--<img src="/img/uploads/avatar-1.jpg" alt="" class="avatar micro">-->
+                                                    <!--<img src="img/uploads/avatar-1.jpg" alt="" class="avatar micro">-->
                                                     <span class="login" itemprop="name">Muph1984</span>
                                                 </a>
                                             </div>
@@ -925,7 +925,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -941,7 +941,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -957,7 +957,7 @@
                             </div>
                             <div class="item has-solution">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -999,7 +999,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1022,7 +1022,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1044,7 +1044,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1066,7 +1066,7 @@
                             <div class="item">
                                 <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Ivan</span></a>
@@ -1079,7 +1079,7 @@
                             <div class="item">
                                 <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>SKS</span></a>
@@ -1092,7 +1092,7 @@
                             <div class="item">
                                 <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Мастер</span></a>
@@ -1106,7 +1106,7 @@
                             <div class="item">
                                 <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Muph1984</span></a>
@@ -1120,7 +1120,7 @@
                             <div class="item">
                                 <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Макс</span></a>
@@ -1148,7 +1148,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1169,7 +1169,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1189,7 +1189,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1241,7 +1241,7 @@
                         <div class="first-column">
                             <div class="row">
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
-                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                                    <img src="img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
@@ -1327,7 +1327,7 @@
                             </p>
 
                             <div class="m-t-20 align-center-xs">
-                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                                <img src="img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
 
                             <p class="m-t-20 small visible-xs">
