--- a/app/category.html
+++ b/app/category.html
@@ -30,8 +30,8 @@
 
 	<!-- Load Fonts CSS Start -->
 	<script>
-		// loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
-		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
+		loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+//		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
 	</script>
 	<!-- Load Fonts CSS End -->
 
@@ -59,7 +59,6 @@
 </head>
 
 <body>
-
     <div id="menu" class="dark-section">
         <button class="menu-close-button close-button">
             <svg viewbox="0 0 40 40">
@@ -231,7 +230,7 @@
                                                 <ul class="list messages-list">
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
                                                             Здравствуйте! Хотел поблагодарить за помощь в ремонте автомобиля ...
@@ -243,7 +242,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
+                                                            <img src="img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
                                                             Привет, Вань!
@@ -255,7 +254,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
                                                             Иван, подскажите, пожалуйста, как поменять заднюю балку?
@@ -324,7 +323,7 @@
                                     </div>
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
-                                            <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
+                                            <img src="img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
@@ -356,7 +355,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-6 col-logo">
                             <a href="index.html">
-                                <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
+                                <img src="img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-5 col-title">
@@ -667,14 +666,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-3.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-3.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login" itemprop="name">IvanIvanIvanIvan</span>
                                                 </a>
                                             </div>
@@ -751,14 +750,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-2.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-2.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
                                             <div class="date">
@@ -831,14 +830,14 @@
                                     </div>
                                     <div class="item-image">
                                         <a href="page.html">
-                                            <img src="/img/uploads/articles/statya-1.jpg" alt="">
+                                            <img src="img/uploads/articles/statya-1.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="text item-text">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                                 <a href="profile.html" itemprop="url">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                                 </a>
                                             </div>
                                             <div class="date">
@@ -975,7 +974,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -991,7 +990,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1007,7 +1006,7 @@
                             </div>
                             <div class="item has-solution">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1049,7 +1048,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1072,7 +1071,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1094,7 +1093,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1116,7 +1115,7 @@
                             <div class="item">
                                 <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Ivan</span></a>
@@ -1129,7 +1128,7 @@
                             <div class="item">
                                 <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>SKS</span></a>
@@ -1142,7 +1141,7 @@
                             <div class="item">
                                 <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Мастер</span></a>
@@ -1156,7 +1155,7 @@
                             <div class="item">
                                 <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Muph1984</span></a>
@@ -1170,7 +1169,7 @@
                             <div class="item">
                                 <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Макс</span></a>
@@ -1198,7 +1197,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1219,7 +1218,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1239,7 +1238,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1291,7 +1290,7 @@
                         <div class="first-column">
                             <div class="row">
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
-                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                                    <img src="img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
@@ -1377,7 +1376,7 @@
                             </p>
 
                             <div class="m-t-20 align-center-xs">
-                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                                <img src="img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
 
                             <p class="m-t-20 small visible-xs">
