--- a/app/profile-saved.html
+++ b/app/profile-saved.html
@@ -30,8 +30,8 @@
 
 	<!-- Load Fonts CSS Start -->
 	<script>
-		// loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
-		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
+		loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+//		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
 	</script>
 	<!-- Load Fonts CSS End -->
 
@@ -231,7 +231,7 @@
                                                 <ul class="list messages-list">
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
                                                             Здравствуйте! Хотел поблагодарить за помощь в ремонте автомобиля ...
@@ -243,7 +243,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
+                                                            <img src="img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
                                                             Привет, Вань!
@@ -255,7 +255,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
                                                             Иван, подскажите, пожалуйста, как поменять заднюю балку?
@@ -324,7 +324,7 @@
                                     </div>
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
-                                            <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
+                                            <img src="img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
@@ -356,7 +356,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-6 col-logo">
                             <a href="index.html">
-                                <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
+                                <img src="img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-5 col-title">
@@ -720,7 +720,7 @@
                         <div class="first-column">
                             <div class="row">
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
-                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                                    <img src="img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
@@ -806,7 +806,7 @@
                             </p>
 
                             <div class="m-t-20 align-center-xs">
-                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                                <img src="img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
 
                             <p class="m-t-20 small visible-xs">
