--- a/app/question.html
+++ b/app/question.html
@@ -30,8 +30,8 @@
 
 	<!-- Load Fonts CSS Start -->
 	<script>
-		// loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
-		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
+		loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+//		loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" ); // Loading fonts, if the site is at the root
 	</script>
 	<!-- Load Fonts CSS End -->
 
@@ -231,7 +231,7 @@
                                                 <ul class="list messages-list">
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Vasya, 2 мин. назад</span>
                                                             <span class="text">
                                                             Здравствуйте! Хотел поблагодарить за помощь в ремонте автомобиля ...
@@ -243,7 +243,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar">
+                                                            <img src="img/uploads/default-avatar.png" alt="" class="avatar">
                                                             <span class="small-text">Den, 2 ч. назад</span>
                                                             <span class="text">
                                                             Привет, Вань!
@@ -255,7 +255,7 @@
                                                     </li>
                                                     <li>
                                                         <a href="profile-dialog.html">
-                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar">
+                                                            <img src="img/uploads/avatar.jpg" alt="" class="avatar">
                                                             <span class="small-text">Master, 2 д. назад</span>
                                                             <span class="text">
                                                             Иван, подскажите, пожалуйста, как поменять заднюю балку?
@@ -324,7 +324,7 @@
                                     </div>
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
-                                            <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
+                                            <img src="img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
@@ -356,7 +356,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-xs-6 col-logo">
                             <a href="index.html">
-                                <img src="/img/logo-full.svg" alt="Avtorem.info" class="logo">
+                                <img src="img/logo-full.svg" alt="Avtorem.info" class="logo">
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-5 col-title">
@@ -545,7 +545,7 @@
                         <div class="page-info">
                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
                                 <a href="#" itemprop="url">
-                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
+                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt=""><span class="login" itemprop="name">Ivan</span>
                                 </a>
                             </div>
                             <div class="date">
@@ -1087,7 +1087,7 @@
                                         <div class="row">
                                             <div class="col-md-4 col-sm-4">
                                                 <a href="#" class="user-info">
-                                                    <img src="/img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
+                                                    <img src="img/uploads/ivan.jpg" class="avatar micro" title="" alt="">
                                                     <span class="login">Ivan</span>
                                                 </a>
                                                 <div class="form-group" title="Имя *">
@@ -1129,7 +1129,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1145,7 +1145,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1161,7 +1161,7 @@
                             </div>
                             <div class="item has-solution">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1203,7 +1203,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1226,7 +1226,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1248,7 +1248,7 @@
                                     </div>
                                 </div>
                                 <a href="page.html">
-                                    <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
+                                    <img src="img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
                                     <a href="page.html" class="text">
@@ -1270,7 +1270,7 @@
                             <div class="item">
                                 <div class="rating-position">1</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Ivan</span></a>
@@ -1283,7 +1283,7 @@
                             <div class="item">
                                 <div class="rating-position">2</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-2.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>SKS</span></a>
@@ -1296,7 +1296,7 @@
                             <div class="item">
                                 <div class="rating-position">3</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Мастер</span></a>
@@ -1310,7 +1310,7 @@
                             <div class="item">
                                 <div class="rating-position">4</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Muph1984</span></a>
@@ -1324,7 +1324,7 @@
                             <div class="item">
                                 <div class="rating-position">5</div>
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                    <img src="img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
                                 <div class="user">
                                     <a href="profile.html" class="login"><span>Макс</span></a>
@@ -1352,7 +1352,7 @@
                         <div class="items">
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1373,7 +1373,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1393,7 +1393,7 @@
                             </div>
                             <div class="item">
                                 <a href="profile.html" class="user-avatar">
-                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                    <img src="img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
                                 <div class="item-content">
                                     <div class="item-info">
@@ -1445,7 +1445,7 @@
                         <div class="first-column">
                             <div class="row">
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
-                                    <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
+                                    <img src="img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
                                 <div class="full-xxs col-xs-6 col-sm-6 col-md-12">
                                     <div class="copyright">
@@ -1531,7 +1531,7 @@
                             </p>
 
                             <div class="m-t-20 align-center-xs">
-                                <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
+                                <img src="img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
 
                             <p class="m-t-20 small visible-xs">
